Fix DCHECK to actually check the strings are sorted

The previous DCHECK was comparing the pointer values, not the strings.

Bug: 833807
Change-Id: I0e63eda10838de481c51630f8932b41537a76847
Reviewed-on: https://chromium-review.googlesource.com/1013525
Commit-Queue: Hans Wennborg <hans@chromium.org>
Reviewed-by: Nico Weber <thakis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551308}
Former-commit-id: fc360e99b44bb77294f9ca099ab6126455910abd